# SlicerCaseIterator

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  SlicerBatch.py
SlicerBatch/: CMakeLists.txt  SlicerBatch.py
SlicerCaseIterator/: CMakeLists.txt  SlicerCaseIterator.py
SlicerCaseIterator/SlicerCaseIteratorLib/: CsvInferenceIterator.py  CsvTableIterator.py  DicomTableIterator.py  IteratorBase.py  IteratorFactory.py  LayoutLogic.py  SegmentationBackend.py  __init__.py
docs/: api.rst  conf.py  index.rst  installation.rst  make.bat  usage.rst
